--- a/plugins/Gk0Wk/TW5-CodeMirror-Enhanced/style.css
+++ b/plugins/Gk0Wk/TW5-CodeMirror-Enhanced/style.css
@@ -1,106 +1,110 @@
 .CodeMirror-hints {
-    /* Floating above tiddlers */
-    z-index: 800 !important;
+  /* Floating above tiddlers */
+  z-index: 800 !important;
 }
 
 .CodeMirror-hint {
-    width: 400px !important;
+  width: 400px !important;
 }
 
 li.cm-hacked-hint {
-    display: flex;
-    justify-content: space-between;
-    white-space: nowrap;
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
 }
 
-li.cm-hacked-hint>span:first-of-type {
-    overflow: hidden;
-    text-overflow: ellipsis;
+li.cm-hacked-hint > span.hint-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-li.cm-hacked-hint>span:last-of-type {
-    padding-left: 10px;
-    font-weight: bold;
-    opacity: 0.5;
+li.cm-hacked-hint > span.hint-title > span.hint-title-highlighted {
+  background: yellow;
+}
+
+li.cm-hacked-hint > span.hint-type {
+  padding-left: 10px;
+  font-weight: bold;
+  opacity: 0.5;
 }
 
 .CodeMirror-hints-append {
-    max-height: 20em !important;
-    width: 300px !important;
-    color: black;
-    resize: both;
+  max-height: 20em !important;
+  width: 300px !important;
+  color: black;
+  resize: both;
 }
 
 span.cm-underlined {
-    text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 /* Enhance from and specially thank to https://github.com/adithya-badidey/TW5-codemirror-plus */
 span.cm-superscript {
-    vertical-align: super;
-    font-size: 0.7em;
-    line-height: 0.1em;
+  vertical-align: super;
+  font-size: 0.7em;
+  line-height: 0.1em;
 }
 
 span.cm-subscript {
-    font-size: 0.7em;
-    line-height: 0.5;
+  font-size: 0.7em;
+  line-height: 0.5;
 }
 
 pre.cm-quote-line {
-    padding-left: 0.4em !important;
-    border-left: #444 solid 0.2em !important;
+  padding-left: 0.4em !important;
+  border-left: #444 solid 0.2em !important;
 }
 
 .cm-code-block-line,
 .latex {
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 span.cm-h1 {
-    font-weight: 700;
-    font-size: 1.383em;
-    line-height: 1.802em;
+  font-weight: 700;
+  font-size: 1.383em;
+  line-height: 1.802em;
 }
 
 span.cm-h2 {
-    font-weight: 600;
-    font-size: 1.296em;
-    line-height: 1.602em;
+  font-weight: 600;
+  font-size: 1.296em;
+  line-height: 1.602em;
 }
 
 span.cm-h3 {
-    font-weight: 500;
-    font-size: 1.215em;
-    line-height: 1.424em;
+  font-weight: 500;
+  font-size: 1.215em;
+  line-height: 1.424em;
 }
 
 span.cm-h4 {
-    font-weight: 400;
-    font-size: 1.138em;
-    line-height: 1.266em;
+  font-weight: 400;
+  font-size: 1.138em;
+  line-height: 1.266em;
 }
 
 span.cm-h5 {
-    font-weight: 400;
-    font-size: 1.067em;
-    line-height: 1.125em;
+  font-weight: 400;
+  font-size: 1.067em;
+  line-height: 1.125em;
 }
 
 span.cm-h6 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 span.cm-link {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 span.cm-internallink,
 span.cm-externallink {
-    cursor: pointer;
-    font-weight: 800;
+  cursor: pointer;
+  font-weight: 800;
 }
 
 span.cm-internallink {
-    text-decoration: none;
+  text-decoration: none;
 }
