Updated with Git-Sync

--- a/tiddlers/Autonumbering Headings.css
+++ b/tiddlers/Autonumbering Headings.css
@@ -1,56 +1,59 @@
 /** Inspired by https://zhuanlan.zhihu.com/p/506929317 */
 /** initialize css counter */
-.tc-tiddler-body {
+/**如果需要显示从二级标题开始前面加上数字序号，那么需要添加class字段，里面写autonumhead */
+
+
+  .autonumhead .tc-tiddler-body {
     counter-set: h1 h2 h3 h4 h5 h6
 }
 
-.tc-tiddler-body > h1 {
+  .autonumhead .tc-tiddler-body > h1 {
     counter-set: h2
 }
 
-.tc-tiddler-body > h2 {
+  .autonumhead .tc-tiddler-body > h2 {
     counter-set: h3
 }
 
-.tc-tiddler-body > h3 {
+  .autonumhead .tc-tiddler-body > h3 {
     counter-set: h4
 }
 
-.tc-tiddler-body > h4 {
+  .autonumhead .tc-tiddler-body > h4 {
     counter-set: h5
 }
 
-.tc-tiddler-body > h5 {
+  .autonumhead .tc-tiddler-body > h5 {
     counter-set: h6
 }
 
 /** put counter result into headings */
-.tc-tiddler-body > h1:before {
+  .autonumhead .tc-tiddler-body > h1:before {
     counter-increment: h1;
     content: 
 }
 
- .tc-tiddler-body > h2:before {
+  .autonumhead .tc-tiddler-body > h2:before {
     counter-increment: h2;
     content: counter(h2) ". "
 }
 
-.tc-tiddler-body > h3:before {
+  .autonumhead .tc-tiddler-body > h3:before {
     counter-increment: h3;
     content: counter(h2) "." counter(h3) " "
 }
 
-.tc-tiddler-body > h4:before{
+  .autonumhead .tc-tiddler-body > h4:before{
     counter-increment: h4;
     content: counter(h2) "." counter(h3) "." counter(h4) " "
 }
 
-.tc-tiddler-body >  h5:before {
+  .autonumhead .tc-tiddler-body >  h5:before {
     counter-increment: h5;
     content: counter(h2) "." counter(h3) "." counter(h4) "." counter(h5) " "
 }
 
-.tc-tiddler-body > h6:before {
+  .autonumhead .tc-tiddler-body > h6:before {
     counter-increment: h6;
     content: counter(h2) "." counter(h3) "." counter(h4) "." counter(h5) "." counter(h6) " "
 }
