--- a/tiddlers/让标题与按钮分隔开来.css
+++ b/tiddlers/让标题与按钮分隔开来.css
@@ -1,6 +1,6 @@
 .tc-titlebar h2 {
     font-size: 1em;
-    display: table-row-group;
+    display: inline;
 }
 .tc-tiddler-frame .tc-tiddler-controls {
 	display: table-header-group;
